feat(workflows): update excavator

--- a/.github/workflows/excavator.yml
+++ b/.github/workflows/excavator.yml
@@ -9,10 +9,11 @@ jobs:
     name: Excavate
     runs-on: windows-latest
     steps:
-      - name: Install Module to convert yaml
+      - name: Install and Import Module to convert yaml
         shell: pwsh
         run: |
           Install-Module "powershell-yaml" -Force
+          Import-Module "powershell-yaml"
       - uses: actions/checkout@main
       - name: Excavate
         uses: ScoopInstaller/GithubActions@main
