PSCompletions: update config

--- a/scripts/PSCompletions/config.json
+++ b/scripts/PSCompletions/config.json
@@ -18,13 +18,13 @@
   "menu_color_item_back": "Black",
   "menu_color_selected_text": "white",
   "menu_color_selected_back": "DarkGray",
-  "menu_color_filter_text": "DarkYellow",
+  "menu_color_filter_text": "Yellow",
   "menu_color_filter_back": "Black",
-  "menu_color_border_text": "DarkGray",
+  "menu_color_border_text": "Gray",
   "menu_color_border_back": "Black",
-  "menu_color_status_text": "DarkBlue",
+  "menu_color_status_text": "Blue",
   "menu_color_status_back": "Black",
-  "menu_color_tip_text": "DarkCyan",
+  "menu_color_tip_text": "Cyan",
   "menu_color_tip_back": "Black",
   "enter_when_single": 0,
   "menu_enable": 1,
