--- a/scripts/PSCompletions/config.json
+++ b/scripts/PSCompletions/config.json
@@ -20,7 +20,7 @@
   "menu_color_selected_back": "DarkGray",
   "menu_color_filter_text": "Yellow",
   "menu_color_filter_back": "Black",
-  "menu_color_border_text": "Gray",
+  "menu_color_border_text": "DarkGray",
   "menu_color_border_back": "Black",
   "menu_color_status_text": "Blue",
   "menu_color_status_back": "Black",
