feat(workflows): update update-readme.yml

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -25,5 +25,5 @@ jobs:
         git config --local user.name "${{ github.actor }}"
         git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
         git add .
-        git commit -m "feat(README): update"
+        git commit -m "[bot] update README"
         git push
