--- a/bucket/SQLynx.json
+++ b/bucket/SQLynx.json
@@ -1,6 +1,6 @@
 {
     "version": "3.4.0",
-    "description": "本地基于网络的 SQL IDE，支持企业桌面和网络管理。它是一款跨平台数据库工具，适用于所有数据处理人员。它支持所有流行的数据库，如 MySQL、MariaDB、PostgreSQL、SQLite、Hive、Impala、Hadoop 等。Native Web-Based SQL IDE, support desktop and web management for enterprise. It's a cross-platform database tool for everyone working with data. It supports all popular databases like MySQL, MariaDB, PostgreSQL, SQLite, Hive, Impala, Hadoop and more.",
+    "description": "本地基于 Web 的 SQL IDE，支持企业桌面和网络管理。它是一款跨平台数据库工具，适用于所有数据处理人员。它支持所有流行的数据库，如 MySQL、MariaDB、PostgreSQL、SQLite、Hive、Impala、Hadoop 等。Native Web-Based SQL IDE, support desktop and web management for enterprise. It's a cross-platform database tool for everyone working with data. It supports all popular databases like MySQL, MariaDB, PostgreSQL, SQLite, Hive, Impala, Hadoop and more.",
     "homepage": "https://www.sqlynx.com/",
     "license": "Unknown",
     "url": "https://maicong-software-1302946156.cos.ap-beijing.myqcloud.com/software/sqlynx_win_3.4.0.zip",
