--- a/.github/workflows/excavator.yml
+++ b/.github/workflows/excavator.yml
@@ -2,8 +2,10 @@ name: Excavator
 on:
   workflow_dispatch:
   schedule:
-    # 每4小时运行一次
-    - cron: "20 */4 * * *"
+    - cron: "*/60 * * * *"
+  workflow_run:
+    workflows: [Update README]
+    types: [completed]
 jobs:
   excavate:
     name: Excavate
