--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -21,9 +21,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --local user.email "abgohxf@outlook.com"
-          git config --local user.name "${{ github.actor }}"
-          git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "[bot] update README"
+          git commit -m "Automatically update README"
           git push
