--- a/.github/workflows/excavator.yml
+++ b/.github/workflows/excavator.yml
@@ -40,4 +40,4 @@ jobs:
     permissions:
       actions: write
     steps:
-      - uses: liskin/gh-workflow-keepalive@v1.2.1
+      - uses: abgox/gh-workflow-keepalive@main
