use lowercase filename format

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Generate list and update README content
         run: |
-          .\bin\generate_list.ps1 "./README.md"
-          .\bin\generate_list.ps1 "./README-CN.md"
+          .\bin\generate_list.ps1 "./readme.md"
+          .\bin\generate_list.ps1 "./readme-cn.md"
 
       - name: Commit and push changes
         run: |
