fix ISSUE_TEMPLATE folder name

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "**/deprecated/*.json",
         "**/bin/*.exe",
         "**/bin/lang/*.json",
-        "**/schedule/*.ps1"
+        "**/schedule/*.ps1",
+        "**/.github/ISSUE_TEMPLATE/**"
     ]
 }
